--- a/ARMdps/Views/Shared/_Layout.cshtml
+++ b/ARMdps/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
     <script src="~/js/toastr.min.js"></script>
     <script src="~/js/jquery.maskedinput.min.js"></script>    
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/department.js" asp-append-version="true"></script>
+    <script src="~/js/Department.js" asp-append-version="true"></script>
     <script src="~/js/region.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
